--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node build/server.js",
-    "dev": "webpack-dev-server --config build/webpack.dev.js",
+    "lint": "tslint --config tslint.json --project tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -43,6 +43,9 @@
   },
   "devDependencies": {
     "@types/modernizr": "^3.5.1",
+    "@types/react": "^16.0.34",
+    "@types/react-dom": "^16.0.3",
+    "babel-eslint": "^8.2.1",
     "css-object-loader": "^0.0.7",
     "typings-for-css-modules-loader": "^1.7.0",
     "webpack-merge": "^4.1.1"
