feat(nozzle_panel): add nozzle panel component

--- a/.modernizrrc.json
+++ b/.modernizrrc.json
@@ -1,6 +1,8 @@
 {
-	"minify": true,
-	"feature-detects": [
-        "css/cssgrid"
-	]
+  "minify": true,
+  "feature-detects": [
+    "test/css/cssgrid",
+    "test/css/flexbox",
+    "test/css/cssvwunit"
+  ]
 }
