--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,31 @@
 {
-    "compilerOptions": {
-        "outDir": "./dist/", // path to output directory
-        "sourceMap": true, // allow sourcemap support
-        "strictNullChecks": true, // enable strict null checks as a best practice
-        "module": "es6", // specifiy module code generation
-        "jsx": "react", // use typescript to transpile jsx to js
-        "target": "es5", // specify ECMAScript target version
-        "allowJs": true, // allow a partial TypeScript and JavaScript codebase
-        "moduleResolution": "node"
-    },
-    "exclude": [
-        "node_modules"
-    ],
-    "include": [
-        "./app/*"
+  "compilerOptions": {
+    "outDir": "./dist/",
+    // path to output directory
+    "sourceMap": true,
+    // allow sourcemap support
+    "strictNullChecks": true,
+    // enable strict null checks as a best practice
+    "module": "es6",
+    // specifiy module code generation
+    "jsx": "react",
+    // use typescript to transpile jsx to js
+    "target": "es5",
+    // specify ECMAScript target version
+    "allowJs": true,
+    // allow a partial TypeScript and JavaScript codebase
+    "moduleResolution": "node",
+    "lib": [
+      "ES5",
+      "ES6",
+      "DOM",
+      "DOM.Iterable"
     ]
+  },
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "./app/*"
+  ]
 }
