--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
+    "react-modal": "^3.1.10",
     "sass-loader": "^6.0.6",
     "sodiumjs": "^1.0.8",
     "source-map-loader": "^0.2.3",
