--- a/package.json
+++ b/package.json
@@ -55,6 +55,10 @@
     "typings-for-css-modules-loader": "^1.7.0",
     "webpack-merge": "^4.1.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/huanhulan/petro_pump.git"
+  },
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
