--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "petro_pump",
+  "name": "petrol_pump",
   "version": "1.0.0",
-  "description": "petro-pump example for frp",
+  "description": "petrol-pump example for frp",
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
@@ -57,7 +57,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/huanhulan/petro_pump.git"
+    "url": "git+https://github.com/huanhulan/petrol_pump.git"
   },
   "config": {
     "commitizen": {
