--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^0.28.8",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
+    "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.4.2",
     "json-loader": "^0.5.7",
     "modernizr": "^3.5.0",
