refactor(app/): lint and add feature-detect hint docs

--- a/.modernizrrc.json
+++ b/.modernizrrc.json
@@ -3,6 +3,8 @@
   "feature-detects": [
     "test/css/cssgrid",
     "test/css/flexbox",
-    "test/css/vhunit"
+    "test/css/vhunit",
+    "test/audio/webaudio",
+    "test/es6/promises"
   ]
 }
