--- a/package.json
+++ b/package.json
@@ -17,13 +17,10 @@
   "author": "lex.huang",
   "license": "MIT",
   "dependencies": {
-    "@types/react-modal": "^3.1.1",
     "autoprefixer": "^7.2.4",
     "awesome-typescript-loader": "^3.4.1",
     "browserslist": "^2.11.0",
     "css-loader": "^0.28.8",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
     "image-webpack-loader": "^3.4.2",
     "json-loader": "^0.5.7",
     "modernizr": "^3.5.0",
@@ -40,9 +37,7 @@
     "sodiumjs": "^1.0.8",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.1",
-    "typescript": "^2.6.2",
-    "webpack": "3.5.4",
-    "webpack-dev-server": "2.5.1"
+    "typescript": "^2.6.2"
   },
   "devDependencies": {
     "@types/modernizr": "^3.5.1",
@@ -52,7 +47,16 @@
     "clean-webpack-plugin": "^0.1.17",
     "commitizen": "^2.9.6",
     "css-object-loader": "^0.0.7",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "progress-bar-webpack-plugin": "^1.11.0",
+    "speed-measure-webpack-plugin": "^1.2.3",
     "typings-for-css-modules-loader": "^1.7.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.3.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dashboard": "^2.0.0",
+    "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.1"
   },
   "repository": {
