--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config ./build/webpack.prod.js",
-    "start": "nodemon --watch build --exec \"webpack-dev-server --config ./build/webpack.dev.js\"",
+    "start": "nodemon --watch build --exec \"webpack-dashboard -- webpack --config ./build/webpack.dev.js\"",
     "lint": "tslint --config tslint.json --project tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -56,6 +56,7 @@
     "webpack": "^4.3.0",
     "webpack-cli": "^3.1.2",
     "webpack-dashboard": "^2.0.0",
+    "webpack-deep-scope-plugin": "^1.6.0",
     "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.1"
   },
